--- a/.obsidian/plugins/simple-embeds/styles.css
+++ b/.obsidian/plugins/simple-embeds/styles.css
@@ -19,6 +19,9 @@
   width: 100%;
   height: 450px;
 }
+.embed-container.github_gist iframe {
+  width: 100%;
+}
 .video-wrapper {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
