--- a/.obsidian/plugins/dataview/styles.css
+++ b/.obsidian/plugins/dataview/styles.css
@@ -18,6 +18,10 @@
     text-align: left;
 }
 
+.table-view-table > tbody > tr:hover {
+    background-color: var(--text-selection);
+}
+
 .table-view-table > thead > tr > th {
     font-weight: 700;
     font-size: larger;
@@ -36,14 +40,11 @@
     max-width: 100%;
 }
 
-<<<<<<< HEAD
-=======
 .table-view-table ul, .table-view-table ol {
     margin-block-start: 0.2em !important;
     margin-block-end: 0.2em !important;
 }
 
->>>>>>> 6b03af7 (Way too many random updates.)
 /** Rendered value styling for any view. */
 .dataview-result-list-root-ul {
     padding: 0em !important;
@@ -60,7 +61,9 @@
     padding-left: 8px;
 }
 
-/** Inline Field Rendering. */
+/*******************/
+/** Inline Fields **/
+/*******************/
 
 .dataview.inline-field-key {
     padding-left: 8px;
@@ -85,8 +88,6 @@
     background-color: var(--background-secondary-alt);
     color: var(--text-nav-selected);
 }
-<<<<<<< HEAD
-=======
 
 /***************/
 /** Task View **/
@@ -139,4 +140,3 @@ div.dataview-error-box {
 .dataview.small-text::after {
 	content: ")";
 }
->>>>>>> 6b03af7 (Way too many random updates.)
