--- a/.obsidian/plugins/dbfolder/styles.css
+++ b/.obsidian/plugins/dbfolder/styles.css
@@ -8,7 +8,8 @@
 .database-plugin:before,
 .database-plugin:after {
   box-sizing: inherit;
-  overflow-x: auto;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .database-plugin {
@@ -56,7 +57,6 @@
 
 .database-plugin__form-input {
   padding: 0.375rem;
-  background-color: var(--background-primary);
   border: none;
   border-radius: 4px;
   font-size: 0.875rem;
@@ -81,20 +81,26 @@
   width: 100%;
 }
 
+div.database-plugin__td.data-input:hover {
+  box-shadow: 0 0 1px 2px var(--text-accent-hover);
+}
+
+/******************************************************
+ *                  Inputs of cells
+ ******************************************************/
 .data-input {
   white-space: pre-wrap;
   border: none;
   padding: 0.5rem;
   color: var(--text-normal);
   font-size: 1rem;
-  border-radius: 4px;
   resize: none;
-  background-color: var(--background-primary);
   box-sizing: border-box;
   flex: 1 1 auto;
   text-align: -webkit-center;
   vertical-align: middle;
 }
+
 /** children of data-input fills parent div*/
 .data-input > * {
   border: none;
@@ -181,6 +187,12 @@ div.database-plugin__checkbox {
   display: inline;
 }
 
+.database-plugin__md_cell ul {
+  margin-block-start: unset !important;
+  margin-block-end: unset !important;
+  display: inline-table;
+}
+
 .database-plugin__markdown-preview-view {
   padding: 0;
   height: fit-content;
@@ -262,7 +274,6 @@ div.database-plugin__checkbox {
   color: var(--text-muted);
   cursor: pointer;
   text-align: left;
-
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -282,11 +293,11 @@ div.database-plugin__checkbox {
 
 .database-plugin__add-row {
   color: var(--text-accent);
-  padding: 0.5rem;
   align-items: center;
-  font-size: 0.875rem;
   cursor: pointer;
+  z-index: 3;
   position: sticky;
+  left: 0;
   bottom: 0;
   background-color: var(--background-primary);
 }
@@ -297,12 +308,16 @@ div.database-plugin__checkbox {
   padding: 0.3rem;
 }
 
-.database-plugin__add-row .database-plugin__td {
-  border: none;
-  background-color: transparent;
-  color: var(--text-muted);
-  display: inline-flex;
-  vertical-align: middle;
+.database-plugin__add-row-input {
+  height: 30px;
+  max-height: 30px;
+  border: 0 !important;
+}
+
+.database-plugin__add-row-input:focus {
+  outline: none;
+  border: 0 !important;
+  box-shadow: 0 0 0 0 !important;
 }
 
 .database-plugin__th {
@@ -330,7 +345,6 @@ div.database-plugin__checkbox {
 .database-plugin__td {
   overflow: hidden;
   color: var(--text-normal);
-  background-color: var(--background-primary);
   align-items: stretch;
   justify-content: center;
   padding: 0;
@@ -364,18 +378,28 @@ div.database-plugin__checkbox {
   padding: 0.6rem;
 }
 
-.database-plugin__sticky_first_column .database-plugin__td:first-child,
-.database-plugin__sticky_first_column .database-plugin__th:first-child {
+.database-plugin__table .database-plugin__td:first-child,
+.database-plugin__table .database-plugin__th:first-child {
   position: sticky;
   left: 0;
   z-index: 1;
 }
 
+.database-plugin__sticky_first_column .database-plugin__td:nth-child(2),
+.database-plugin__sticky_first_column .database-plugin__th:nth-child(2) {
+  position: sticky;
+  z-index: 2;
+  left: 30px;
+  background-color: var(--background-secondary);
+}
+
 .database-plugin__table {
-  border-spacing: 0;
+  position: relative;
+  border-spacing: 2px;
   border-bottom: 1px solid var(--background-modifier-border);
   display: table;
   height: 1px; /** Hack to prevent collapsing of table cells */
+  overflow: scroll;
 }
 
 .database-plugin__th:last-child {
@@ -401,15 +425,12 @@ div.database-plugin__checkbox {
   background-color: var(--background-secondary);
 }
 
-.database-plugin__sticky-level-1 {
-  position: sticky;
-  top: 0;
-  z-index: 2;
-}
 .database-plugin__sticky-level-2 {
+  position: -webkit-sticky;
   position: sticky;
-  top: 4rem;
-  z-index: 2;
+  left: 0;
+  top: 2.65rem;
+  z-index: 3;
 }
 
 .database-plugin__table-header-group {
@@ -418,11 +439,15 @@ div.database-plugin__checkbox {
 }
 
 .database-plugin__navbar {
-  flex: 1 0 auto;
-  background-color: var(--background-secondary);
+  width: 100%;
+  position: sticky;
+  position: -webkit-sticky;
+  left: 0;
+  top: 0;
+  z-index: 2;
 }
 
-.database-plugin__padding-left {
+.database-plugin__padding-left-05 {
   padding-left: 0.5rem;
 }
 
@@ -469,40 +494,44 @@ div.database-plugin__checkbox {
 .database-plugin__tags-container {
   gap: 0.3rem;
 }
-
-span.text-align-right {
+/************************************************************
+ *  CELL CONTENT STYLES
+ ************************************************************/
+.database-plugin__text-align-right {
   display: flex;
-  align-items: center;
   justify-content: flex-end;
+  text-align: right;
 }
 
-.cell-padding {
-  padding: 0.5rem;
-}
-
-.d-flex {
+.database-plugin__text-align-center {
   display: flex;
-}
-
-.cursor-default {
-  cursor: default;
-}
-
-.align-items-center {
   align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.flex-wrap-wrap {
-  flex-wrap: wrap;
+.database-plugin__text-align-left {
+  display: flex;
+  justify-content: flex-start;
+  text-align: left;
+}
+
+.database-plugin__text-align-justify {
+  display: flex;
+  text-align: justify;
+}
+
+.database-plugin__text-wrap {
+  white-space: normal;
+}
+
+.database-plugin__text-nowrap {
+  white-space: nowrap;
 }
 
 .menu.database-plugin__popper {
   position: relative;
   padding: 0;
-}
-
-.cursor-pointer {
-  cursor: pointer;
 }
 
 .icon-margin {
@@ -517,13 +546,26 @@ span.text-align-right {
   font-size: 0.75rem;
 }
 
-.flex-1 {
-  flex: 1;
-}
-
 /**
 *  Database Styles
 */
+.dbfolder-table-container {
+  contain: content;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.database-plugin__scroll-horizontal {
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
+.database-plugin__scroll-container {
+  will-change: transform;
+}
+
 .dbfolder-table-container tr input {
   background: var(--background-modifier-box-shadow);
 }
@@ -543,11 +585,95 @@ span.text-align-right {
 .configuration-section-container-columns-template {
   background-color: var(--background-modifier-box-shadow);
 }
+/**
+*  Row styles
+*/
+/* row context menu shows an icon to the left of the first cell translucent*/
+.database-plugin__row-context-menu {
+  padding: 0;
+  background-color: var(--background-primary);
+}
+
+/**
+* AUTOCOMPLETE STYLES
+*/
+.database-plugin__autocomplete {
+  font-size: 0.875rem;
+  border: 1px solid var(--background-modifier-border);
+  background-color: var(--background-primary);
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  min-width: 20ch;
+  max-width: 40ch;
+  max-height: 200px;
+  border-radius: 6px;
+  box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2);
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.database-plugin__autocomplete li {
+  margin: 0;
+}
+
+.database-plugin__autocomplete li em {
+  opacity: 0.6;
+}
+
+.database-plugin .textcomplete-footer,
+.database-plugin .textcomplete-header {
+  display: none;
+}
+
+.database-plugin__autocomplete-item-active,
+.database-plugin__autocomplete-item {
+  border-top: 1px solid var(--background-modifier-border);
+  padding: 4px 6px;
+  cursor: pointer;
+}
+
+.database-plugin__autocomplete
+  .textcomplete-header
+  + .database-plugin__autocomplete-item,
+.database-plugin__autocomplete
+  .textcomplete-header
+  + .database-plugin__autocomplete-item-active {
+  border-top: none;
+}
+
+.database-plugin__autocomplete-item:hover,
+.database-plugin__autocomplete-item-active {
+  color: var(--text-on-accent);
+  background-color: var(--interactive-accent-hover);
+}
+
+.database-plugin__file-suggestion-wrapper {
+  display: flex;
+  line-height: 1.2;
+}
+
+.database-plugin__file-suggestion-icon {
+  flex-shrink: 0;
+  flex-grow: 0;
+  padding-right: 4px;
+}
+
+.database-plugin__file-suggestion-subtitle {
+  font-size: 0.875em;
+  color: var(--text-muted);
+}
+
+.database-plugin__autocomplete-item:hover
+  .database-plugin__file-suggestion-subtitle,
+.database-plugin__autocomplete-item-active
+  .database-plugin__file-suggestion-subtitle {
+  color: var(--text-on-accent);
+}
 
 /*
 *  React-datepicker styles
 */
-
 .react-datepicker__year-read-view--down-arrow,
 .react-datepicker__month-read-view--down-arrow,
 .react-datepicker__month-year-read-view--down-arrow,
@@ -660,7 +786,7 @@ span.text-align-right {
   font-size: 1rem;
   resize: none;
   box-sizing: border-box;
-  height: inherit;
+  height: 100%;
   width: inherit;
   align-self: center;
   top: 0;
@@ -675,6 +801,7 @@ span.text-align-right {
   border-radius: 0.3rem;
   display: inline-block;
   position: relative;
+  z-index: 4;
 }
 
 .react-datepicker--time-only .react-datepicker__triangle {
@@ -697,7 +824,7 @@ span.text-align-right {
 }
 
 .react-datepicker-popper {
-  z-index: 1;
+  z-index: 4;
 }
 
 .react-datepicker-popper[data-placement^="bottom"] {
@@ -792,7 +919,7 @@ span.text-align-right {
   top: 2px;
   padding: 0;
   border: none;
-  z-index: 1;
+  z-index: 4;
   height: 32px;
   width: 32px;
   text-indent: -999em;
@@ -928,15 +1055,7 @@ span.text-align-right {
   .react-datepicker-time__input-container
   .react-datepicker-time__input
   input[type="time"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
   margin: 0;
-}
-
-.react-datepicker__input-time-container
-  .react-datepicker-time__input-container
-  .react-datepicker-time__input
-  input[type="time"] {
-  -moz-appearance: textfield;
 }
 
 .react-datepicker__input-time-container
@@ -1317,7 +1436,7 @@ span.text-align-right {
   width: 50%;
   left: 25%;
   top: 30px;
-  z-index: 1;
+  z-index: 4;
   text-align: center;
   border-radius: 0.3rem;
   border: 1px solid #aeaeae;
@@ -1399,26 +1518,21 @@ span.text-align-right {
   cursor: pointer;
   background-color: transparent;
   border: 0;
+  box-shadow: none;
   outline: 0;
   padding: 0 6px 0 0;
   position: absolute;
   top: 0;
   right: 0;
-  height: 100%;
   display: table-cell;
   vertical-align: middle;
 }
 
 .react-datepicker__close-icon::after {
   cursor: pointer;
-  background-color: #216ba5;
-  color: #fff;
+  background-color: var(--text-accent);
+  color: var(--text-primary);
   border-radius: 50%;
-  height: 16px;
-  width: 16px;
-  padding: 2px;
-  font-size: 12px;
-  line-height: 1;
   text-align: center;
   display: table-cell;
   vertical-align: middle;
@@ -1445,7 +1559,7 @@ span.text-align-right {
   justify-content: center;
   align-items: center;
   display: flex;
-  z-index: 2147483647;
+  z-index: 4;
 }
 
 .react-datepicker__portal .react-datepicker__day-name,
